--- a/test.html
+++ b/test.html
@@ -243,7 +243,7 @@
   <!-- 頁尾 -->
   <footer class="bg-dark">
     <div class="container-fluid">
-      <div class="row bg-dark py-5">
+      <div class="row bg-dark py-5 align-items-center">
         <div class="col-12 col-md-6 d-flex text-light justify-content-center">
           <ul class="footer-list">
             <li class="title mt-3 mb-2">關於NET</li>
