--- a/personal_id.html
+++ b/personal_id.html
@@ -39,7 +39,7 @@
         <div class="container-fluid">
           <a class="navbar-brand d-flex align-items-center" href="#">
             <img src="img/Adobe Express - file.png" alt="logo" class="logo" />
-            <span class="logo-context fs-3 fw-bold">3C用品店</span>
+            <span class="logo-context fs-3 fw-bold">3C用品店 | 個人檔案</span>
           </a>
           <div class="tool-right me-4">
             <a href="#" alt="account">
@@ -55,12 +55,10 @@
 
     <!-- 個人檔案 -->
     <div class="container px-5 py-5">
-        <div class="text-center">
-            <h1>個人檔案</h1>
-        </div>
       <div class="row">
         <div class="col-2"></div>
         <div class="col-8">
+          <h1>客戶基本資料</h1>
           <form action="#" class="form-horizontal">
             <div class="form-group py-2">
               <label for="name" class="form-label">姓名</label>
