--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
+    <title>index</title>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -14,6 +14,66 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
     <!-- 自定義CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- 自訂義script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
+    <!-- 網頁圖示 -->
+    <link rel="icon" type="image/x-icon" href="img/hacker.png">
+    <script>
+      $(function () {
+        $(window).scroll(function () {
+            if ($(this).scrollTop() > 200) {
+                $("#backToTop").css("display", "flex");
+            } else {
+                $("#backToTop").css("display", "none");
+            }
+        });
+        $("#backToTop").click(function () {
+            $("html").animate({ scrollTop: 0 });
+        });
+        $(".drop_item").click(function(){
+          $(".dropdown-toggle").html($(this).html());
+          $(".drop_item").each(function(){
+            $(this).show();
+          })
+          $(this).hide();
+          if($(this).text() == "排序：全部"){
+            $(".list-group-item").show();
+          }else if($(this).text() == "排序：手機/平板"){
+            for(var i=0; i<9; i++){
+              if(i<3)
+                $(".list-group-item").eq(i).show();
+              else
+              $(".list-group-item").eq(i).hide();
+            }
+          }else if($(this).text() == "排序：相機/相機配件"){
+            for(var i=0; i<9; i++){
+              if(i >= 3 && i <= 5)
+                $(".list-group-item").eq(i).show();
+              else
+              $(".list-group-item").eq(i).hide();
+            }
+          }else{
+            for(var i=0; i<9; i++){
+              if(i >= 6 && i <= 8)
+                $(".list-group-item").eq(i).show();
+              else
+              $(".list-group-item").eq(i).hide();
+            }
+          }
+        })
+        $(".page_").click(function(){
+          $(".page_").removeClass("active");
+          $(this).addClass("active");
+        })
+        $(".page_f").click(function(){
+          $(".page_").first().trigger("click");
+        })
+        $(".page_e").click(function(){
+          $(".page_").last().trigger("click");
+        })
+      });
+    </script>
 </head>
 <body>
   <!-- 導覽列 -->
@@ -21,7 +81,7 @@
     <nav class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="#">
-          <img src="img/Adobe Express - file.png" alt="logo" class="logo">
+          <img src="img/hacker.png" alt="logo" class="logo">
           <span class="logo-context fs-3 fw-bold">3C用品店</span>
         </a>
         <div class="tool-right me-4">
@@ -62,21 +122,15 @@
       <div class="row">
         <div class="col-2 d-flex justify-content-end mt-5">
           <div class="list-group list-group-flush">
-            <a href="#" class="list-group-item">
-              iPhone
-            </a>
-            <a href="#" class="list-group-item">
-              iPad
-            </a>
-            <a href="#" class="list-group-item">
-              AI手機
-            </a>
-            <a href="#" class="list-group-item">
-              安卓手機
-            </a>
-            <a href="#" class="list-group-item">
-              一般手機
-            </a>
+            <a href="#" class="list-group-item">iPhone</a>
+            <a href="#" class="list-group-item">iPad</a>
+            <a href="#" class="list-group-item">安卓手機</a>
+            <a href="#" class="list-group-item">微單眼/單眼</a>
+            <a href="#" class="list-group-item">單眼鏡頭</a>
+            <a href="#" class="list-group-item">數位/拍立得</a>
+            <a href="#" class="list-group-item">筆記型電腦</a>
+            <a href="#" class="list-group-item">桌上型電腦</a>
+            <a href="#" class="list-group-item">LCD螢幕</a>
           </div>
         </div>
         <div class="col-10">
@@ -92,9 +146,10 @@
                   排序：全部
                 </button>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">排序：手機/平板</a></li>
-                  <li><a class="dropdown-item" href="#">排序：相機/相機配件</a></li>
-                  <li><a class="dropdown-item" href="#">排序：電腦/筆電</a></li>
+                  <li><a class="dropdown-item drop_item" href="#">排序：全部</a></li>
+                  <li><a class="dropdown-item drop_item" href="#">排序：手機/平板</a></li>
+                  <li><a class="dropdown-item drop_item" href="#">排序：相機/相機配件</a></li>
+                  <li><a class="dropdown-item drop_item" href="#">排序：電腦/筆電</a></li>
                 </ul>
               </div>
             </div>
@@ -103,7 +158,7 @@
           <div class="row justify-content-center">
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top">
+                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -113,7 +168,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top">
+                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -123,7 +178,61 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top">
+                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-auto d-flex justify-content-center mt-4">
+              <div class="card" style="width: 18rem;">
+                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -133,7 +242,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top">
+                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -143,7 +252,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top">
+                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -153,67 +262,7 @@
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
-                </div>
-              </div>
-            </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
-                </div>
-              </div>
-            </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
-                </div>
-              </div>
-            </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
-                </div>
-              </div>
-            </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
-                </div>
-              </div>
-            </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
-                </div>
-              </div>
-            </div>
-            <div class="col-auto d-flex justify-content-center mt-4">
-              <div class="card" style="width: 18rem;">
-                <img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top">
+                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -226,12 +275,19 @@
             <div class="col">
               <nav aria-label="Page navigation example">
                 <ul class="pagination mt-3 position-relative justify-content-center">
-                  <li class="page-item"><a class="page-link" href="#">前一頁</a></li>
-                  <li class="page-item"><a class="page-link" href="#">1</a></li>
-                  <li class="page-item"><a class="page-link" href="#">2</a></li>
-                  <li class="page-item"><a class="page-link" href="#">3</a></li>
-                  <li class="page-item"><a class="page-link" href="#">下一頁
-                  </a></li>
+                  <li class="page-item page_f">
+                    <a class="page-link text-dark" href="#" aria-label="Previous">
+                      <span aria-hidden="true">&laquo;</span>
+                    </a>
+                  </li>
+                  <li class="page-item page_ active"><a class="page-link text-dark" href="#">1</a></li>
+                  <li class="page-item page_"><a class="page-link text-dark" href="#">2</a></li>
+                  <li class="page-item page_"><a class="page-link text-dark" href="#">3</a></li>
+                  <li class="page-item page_e">
+                    <a class="page-link text-dark" href="#" aria-label="Next">
+                      <span aria-hidden="true">&raquo;</span>
+                    </a>
+                  </li>
                 </ul>
               </nav>
             </div>
@@ -244,30 +300,8 @@
   <footer class="bg-dark">
     <div class="container-fluid">
       <div class="row bg-dark py-5 align-items-center">
-        <div class="col-12 col-md-6 d-flex text-light justify-content-center">
-          <ul class="footer-list">
-            <li class="title mt-3 mb-2">關於NET</li>
-            <li><a href="#" class="link-light link-underline-dark">品牌故事</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark">門市據點</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark" target="_blank">人才招募</a></li>
-          </ul>
-          <ul class="footer-list">
-            <li class="title mt-3 mb-2">購物須知</li>
-            <li><a href="#" class="link-light link-underline-dark">訂購流程</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark">十天鑑賞期</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark">全台商品修改</a></li>
-          </ul>
-          <ul class="footer-list">
-            <li class="title mt-3 mb-2">會員服務</li>
-            <li><a href="#" class="link-light link-underline-dark">會員中心</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark">客服中心</a></li>
-          </ul>
-          <ul class="footer-list">
-            <li class="title mt-3 mb-2">聲明條款</li>
-            <li><a href="#" class="link-light link-underline-dark">隱私權保護</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark">政令宣導</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark">工作條款</a></li>
-          </ul>
+        <div class="col-12 col-md-6 text-light d-flex justify-content-center mt-3">
+          <span class="d-flex w-75 border border-2 border-white rounded">防詐騙提醒：3C用品店絕不會以電話或簡訊通知訂單/分期出錯、或變更付款方式，更不會要您前往ATM進行任何操作！不應在3C用品店以外的任何地方輸入3C用品店帳密(例如非政府官方的電子發票app)，以免權益受損！</span>
         </div>
         <div class="col-12 col-md-6 d-flex mt-3">
           <div class="col-6 d-flex justify-content-end">
@@ -306,5 +340,6 @@
       </div>
     </div>
   </footer>
+  <button id="backToTop" class="back-to-top"></button>
 </body>
 </html>
