--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>account</title>
+    <title>register</title>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -14,6 +14,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap" rel="stylesheet">
     <!-- 自定義CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- 自訂義script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
+    <!-- 網頁圖示 -->
+    <link rel="icon" type="image/x-icon" href="img/hacker.png">
 </head>
 <body>
   <!-- 導覽列 -->
@@ -21,7 +26,7 @@
     <nav class="navbar navbar-expand-lg bg-light border-bottom border-1 border-black">
       <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" href="#">
-          <img src="img/Adobe Express - file.png" alt="logo" class="logo">
+          <img src="img/hacker.png" alt="logo" class="logo">
           <span class="logo-context fs-3 fw-bold">3C用品店</span>
         </a>
         <div class="tool-right me-4">
@@ -38,10 +43,12 @@
   <!-- 帳號密碼 -->
    <main>
     <section class="h-100 d-flex align-items-center">
-        <div class="container p-3">
-            <div class="row justify-content-center">
-                <div class="col-4 border border-2 p-5">
-                    <form action="#">
+        <div class="container p-3 h-100">
+            <div class="row h-100">
+                <div class="col-12 d-flex justify-content-center align-items-center">
+                  <div class="d-flex flex-column justify-content-center align-items-center w-50 h-100 border border-2">
+                    <div class="w-75">
+                      <form action="#">
                         <div class="mb-3">
                             <label for="exampleFormControlInput1" class="form-label">會員信箱</label>
                             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email會員信箱">
@@ -50,15 +57,14 @@
                             <label for="exampleFormControlInput1" class="form-label">會員密碼</label>
                             <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="*************">
                         </div>
-                    </form>
-                        <button type="button" class="btn btn-dark w-100 mb-3">登入</button>
-                        <div class="d-flex justify-content-center">
-                            <button type="button" class="btn">忘記密碼</button>
-                        </div>
-                </div>
-                <div class="col-4 d-flex flex-column justify-content-center align-items-center border border-2 border-start-0 gap-3 p-5">
-                    <span>首次購物，馬上加入會員!</span>
-                    <button type="button" class="btn btn-dark">註冊會員</button>
+                        <button type="button" class="btn btn-dark w-100 mb-3">註冊會員</button>
+                      </form>
+                    </div>
+                    <div class="d-flex justify-content-center align-items-center">
+                        <span>已有帳號？</span>
+                        <button type="button" class="btn text-danger">登入</button>
+                    </div>
+                  </div>
                 </div>
             </div>
         </div>
@@ -68,30 +74,8 @@
   <footer class="bg-dark">
     <div class="container-fluid">
       <div class="row bg-dark py-5 align-items-center">
-        <div class="col-12 col-md-6 d-flex text-light justify-content-center">
-          <ul class="footer-list">
-            <li class="title mt-3 mb-2">關於NET</li>
-            <li><a href="#" class="link-light link-underline-dark">品牌故事</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark">門市據點</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark" target="_blank">人才招募</a></li>
-          </ul>
-          <ul class="footer-list">
-            <li class="title mt-3 mb-2">購物須知</li>
-            <li><a href="#" class="link-light link-underline-dark">訂購流程</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark">十天鑑賞期</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark">全台商品修改</a></li>
-          </ul>
-          <ul class="footer-list">
-            <li class="title mt-3 mb-2">會員服務</li>
-            <li><a href="#" class="link-light link-underline-dark">會員中心</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark">客服中心</a></li>
-          </ul>
-          <ul class="footer-list">
-            <li class="title mt-3 mb-2">聲明條款</li>
-            <li><a href="#" class="link-light link-underline-dark">隱私權保護</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark">政令宣導</a></li>
-            <li class="mt-1"><a href="#" class="link-light link-underline-dark">工作條款</a></li>
-          </ul>
+        <div class="col-12 col-md-6 text-light d-flex justify-content-center mt-3">
+          <span class="d-flex w-75 border border-2 border-white rounded">防詐騙提醒：3C用品店絕不會以電話或簡訊通知訂單/分期出錯、或變更付款方式，更不會要您前往ATM進行任何操作！不應在3C用品店以外的任何地方輸入3C用品店帳密(例如非政府官方的電子發票app)，以免權益受損！</span>
         </div>
         <div class="col-12 col-md-6 d-flex mt-3">
           <div class="col-6 d-flex justify-content-end">
