--- a/index.html
+++ b/index.html
@@ -158,115 +158,157 @@
           <div class="row justify-content-center">
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
+                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
+                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
+                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
+                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
+                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="col-auto d-flex justify-content-center mt-4">
               <div class="card" style="width: 18rem;">
-                <a href="#"><img src="img/555332_400_001E99BAAE799BD.jpg" class="card-img-top"></a>
+                <a href="#"><img src="img/iphone16pro.png" class="card-img-top"></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-
+                  <span class="fs-5">iPhone 16 Pro(128G/6.3吋)</span>
+                  <h5 class="card-title">售價<span class="price">11,900</span>元</h5>
+                  <div class="d-flex gap-3">
+                    <button type="button" class="btn btn-danger">直接購買</button>
+                    <button type="button" class="btn btn-primary">加入購物車</button>
+                  </div>
                 </div>
               </div>
             </div>
