--- a/register.html
+++ b/register.html
@@ -17,8 +17,57 @@
     <!-- 自訂義script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.11.1/localization/messages_zh_TW.js "></script>
     <!-- 網頁圖示 -->
     <link rel="icon" type="image/x-icon" href="img/hacker.png">
+    <script>
+      $(function() {
+        $("#register").validate({
+          submitHandler: function(form) {
+              alert("success!");
+              form.submit();
+          },
+          rules:{
+            account:{
+              required:true,
+              minlength:6,
+              maxlength:10
+            },
+            pwd:{
+                required:true,
+                minlength:6,
+                maxlength:12
+            },
+            pwd2:{
+              required:true,
+              equalTo:"#pwd"
+            },
+            email:{
+              required:true,
+            }
+          },
+          messages: {
+            account: {
+                required:"帳號為必填欄位",
+                minlength:"帳號最少要6個字",
+                maxlength:"帳號最長10個字"
+            },
+            pwd:{
+                required:"密碼為必填欄位",
+                minlength:"密碼最少要6個字",
+                maxlength:"密碼最少要12個字"
+            },
+            pwd2: {
+              required:"密碼確認為必填欄位",
+              equalTo:"兩次密碼不相符"
+            },
+            email:{
+              required:"電子信箱為必填欄位"
+            }
+          }
+        });
+      });
+    </script>
 </head>
 <body>
   <!-- 導覽列 -->
@@ -48,16 +97,24 @@
                 <div class="col-12 d-flex justify-content-center align-items-center">
                   <div class="d-flex flex-column justify-content-center align-items-center w-50 h-100 border border-2">
                     <div class="w-75">
-                      <form action="#">
+                      <form action="#" id="register">
                         <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">會員信箱</label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email會員信箱">
+                          <label for="exampleFormControlInput1" class="form-label">會員帳號</label>
+                          <input type="text" class="form-control" id="exampleFormControlInput1" name="account" placeholder="帳號長度介於6-10">
+                      </div>
+                        <div class="mb-3">
+                            <label for="pwd" class="form-label">會員密碼</label>
+                            <input type="password" class="form-control" id="pwd" name="pwd" placeholder="密碼長度介於6-12">
                         </div>
                         <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label">會員密碼</label>
-                            <input type="password" class="form-control" id="exampleFormControlInput1" placeholder="*************">
+                          <label for="pwd2" class="form-label">密碼確認</label>
+                          <input type="password" class="form-control" id="pwd2" name="pwd2">
                         </div>
-                        <button type="button" class="btn btn-dark w-100 mb-3">註冊會員</button>
+                        <div class="mb-3">
+                          <label for="exampleFormControlInput3" class="form-label">會員信箱</label>
+                          <input type="email" class="form-control" id="exampleFormControlInput3" name="email" placeholder="Email會員信箱">
+                      </div>
+                        <button type="submit" class="btn btn-dark w-100 mb-3">註冊會員</button>
                       </form>
                     </div>
                     <div class="d-flex justify-content-center align-items-center">
