--- a/shop.html
+++ b/shop.html
@@ -81,14 +81,10 @@
     <main>
       <div class="container">
         <div class="row pt-3">
-          <div class="col-4">
-            <img
-              src="img/11453217_R1.jpg"
-              alt=""
-              class="w-100 border border-3 border-black"
-            />
+          <div class="col-12 col-md-4">
+            <img src="img/11453217_R1.jpg" alt="" class="w-100 border border-3 border-black"/>
           </div>
-          <div class="col-8">
+          <div class="col-12 col-md-8">
             <h4 class="p-3">
               SONY 索尼 WH-1000XM5 主動式降噪旗艦藍芽耳機(台灣公司貨保固12+6)
             </h4>
@@ -133,8 +129,8 @@
           </div>
         </div>
         <div class="row mt-3">
-          <div class="mt-1">
-            <ul class="list-group list-group-horizontal text-center w-25 pb-3">
+          <div class="mt-1 w-100">
+            <ul class="list-group list-group-horizontal text-center w-50 pb-3">
               <button type="button"class="list-group-item list-group-item-action spec-comment spec-btn active"aria-current="true">
                 商品規格
               </button>
